@@ -16,9 +16,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 - From: Paul Walmsley <shag@booyaka.com>
   Subject: BUG: mod_perl >= 1.23 on Perl 5.6 uses stdout fd for STDIN and STDOUT
 
-- From: Perrin Harkins <perrin@primenet.com>
-  Subject: Re: How to recognize server shutdown?
-
 - From: Wenzhong Tang <Tang@appliant.com>
   Subject: RE: Prototype mismatch in Apache::PerlRun line 343
 
